<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">AuroraWatch UK</string>
    <string name="appIdentifier">aurora-watch-developers/AuroraWatchApp</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="aboutMessage">Get notifications when aurora may be visible in the UK, using information provided by AuroraWatch UK. Android app written by Steve Marple.</string>
    <string name="exit">Exit</string>
    <string name="awUrl">http://aurorawatch.lancs.ac.uk/</string>
    <string name="aurorawatchLogoDesc">AuroraWatch UK logo</string>
    <string name="startService">Start service</string>
    <string name="showApp">Show AuroraWatch UK</string>
    <string name="license">AuroraWatch UK alerts data is provided by Lancaster University, UK using data from the SAMNET and/or AuroraWatchNet magnetometer networks.</string>
    <string name="alertLevelSummary">Amber alert: possible aurora</string>
    <string name="alertLevelDetail">Aurora is likely to be visible from Scotland, northern England and Northern Ireland</string>
    <string name="disturbanceLevelLabel">Disturbance level</string>
    <string name="disturbanceLevelUnknown">unknown</string>
    <string name="disturbanceLevelUnit">nT</string>
    <string name="retrievalTime">Recorded:%1$s%2$s</string>
    <string name="networkErrorTitle">Network error</string>
    <string name="networkError">Sorry, we were unable to connect to Aurora Watch UK. Please check your network settings.</string>
    <string name="networkErrorSettings">Settings</string>
    <string name="formatErrorTitle">Unrecognised format</string>
    <string name="formatError">Sorry, the latest information from Aurora Watch UK is not in a recognised format. If this error persists, please update the app to the latest version.</string>
    <string name="formatErrorCheckForUpdates">Check for updates</string>
    <string name="marketURL">market://details?id=org.aurorawatchdevs.aurorawatch</string>
    <string name="awUrlButton">AuroraWatch UK Website</string>
    <string name="faq">FAQs</string>
    <string name="awTwitter">AuroraWatch UK on Twitter</string>
    <string name="awFacebook">AuroraWatch UK on Facebook</string>
    <string name="awFlickr">AuroraWatch UK on Flickr</string>
    <string name="notifications">Notification min. level</string>
    <string name="minalertlabel">Minimum alert level</string>
    <string name="alertNone">None</string>
    <string name="alertMinor">Minor</string>
    <string name="alertAmber">Amber</string>
    <string name="alertRed">Red</string>
    <string name="title_activity_main">AuroraWatch UK</string>
    <string name="title_settings">Settings</string>
    <string name="title_section1">Right Now</string>
    <string name="title_section2">Past 24 Hours</string>
    <string name="title_section3">More</string>
    <string name="title_section4">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="licensing_header">Software License</string>
    <string name="licensing_info">AuroraWatch UK alerts data is provided by Lancaster University, UK using data from the SAMNET and/or AuroraWatchNet magnetometer networks.</string>
    <string name="url_aurorawatch">"<a href="http://aurorawatch.lancs.ac.uk">AuroraWatch UK</a>"</string>
    <string name="url_lancaster">"<a href="http://www.lancaster.ac.uk">Lancaster University</a>"</string>
    <string name="url_samnet">"<a href="http://spears.lancs.ac.uk/samnet/">SAMNET</a>"</string>
    <string name="url_aurorawatchnet">"<a href="http://aurorawatch.net/">AuroraWatchNet</a>"</string>
    <string name="url_support">"<a href="https://groups.google.com/forum/#!forum/aurorawatch-uk-android-app">AuroraWatch UK App Support</a>"</string>
    <string name="pick_account">You cannot sign up for push alerts without selecting an account</string>
    <string name="not_online">You are not currently connected to the internet, so your Notification setting cannot be saved.</string>
    <string name="playservices_error">Sorry, but Google Play Services is either outdated or missing from your device</string>
    <string name="gps_warning_label">Setting alert notification level will require AuroraWatch UK to link to your Google account</string>
    <string name="pleasewait">Please wait</string>
    <string name="notification_body"> alert of auroral activity was received!</string>
    <string name="notification_header">AuroraWatch activity detected!</string>
    <string name="rating_no_thanks">No thanks</string>
    <string name="rating_remind_later">Remind me later</string>
    <string name="rating_rate">Rate Aurorawatch UK</string>
    <string name="rating_header">If you enjoy using Aurorawatch UK, please take a moment to rate it. Thanks!</string>
    <string name="alert_range_info">Do not show alert notifications between these hours:</string>
</resources>
