<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notifications"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/alertNone"
            android:id="@+id/btnAlertNone"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff00" />

        <Button
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/alertMinor"
            android:id="@+id/btnAlertMinor" />

        <Button
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/alertAmber"
            android:id="@+id/btnAlertAmber" />

        <Button
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/alertRed"
            android:id="@+id/btnAlertRed" />

    </LinearLayout>

</LinearLayout>