<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/appName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/awUrlButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/aw"
        android:maxHeight="17dp"
        android:scaleType="fitCenter"
        android:text="@string/awUrlButton" />

    <Button
        android:id="@+id/faqButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/question"
        android:maxHeight="17dp"
        android:scaleType="fitCenter"
        android:text="@string/faq" />

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/twitter"
        android:maxHeight="17dp"
        android:scaleType="fitCenter"
        android:text="@string/awTwitter" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/facebook"
        android:maxHeight="17dp"
        android:scaleType="fitCenter"
        android:text="@string/awFacebook" />

    <Button
        android:id="@+id/flickrButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/flickr"
        android:maxHeight="17dp"
        android:scaleType="fitCenter"
        android:text="@string/awFlickr" />

</LinearLayout>