<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle"
            android:text="@string/networkErrorTitle"
            android:drawableLeft="@drawable/ic_action_warning"
            android:drawablePadding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/networkError" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            style="@style/TextStyle"
            android:id="@+id/btnOpenSettings"
            android:drawableLeft="@drawable/ic_action_settings"
            android:drawablePadding="5dp"
            android:text="@string/networkErrorSettings" />

    </LinearLayout>


</LinearLayout>