<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="13"
        android:gravity="center_vertical">

        <TextView
            style="@style/AWTextView"
            android:textStyle="bold"
            android:id="@+id/alertLevelSummary"
            android:textColor="#1f0a00"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="36">

        <TextView
            style="@style/AWTextView"
            android:text="@string/disturbanceLevelLabel"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                style="@style/AWTextView"
                android:textSize="64sp"
                android:id="@+id/disturbanceLevelValue"
                android:layout_gravity="bottom"/>

            <TextView
                style="@style/AWTextView"
                android:id="@+id/disturbanceLevelUnit"
                android:text="@string/disturbanceLevelUnit"
                android:layout_gravity="bottom"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25">

        <TextView
            style="@style/AWTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alertLevelDetail"
            android:id="@+id/alertLevelDetail" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="26">

        <TextView
            style="@style/AWTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/retrievalTime"
            android:id="@+id/retrievalTime" />

    </LinearLayout>

</LinearLayout>